--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+	<p>{{ site.description2 | default: site.github.project_tagline }}</p>
+
       </header>
       <section>
 
