--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,8 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+	<!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+
 
 	<p>{{ site.description2 | default: site.github.project_tagline }}</p>
 
