--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,9 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
 
         {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <img src="{{site.logo | relative_url}}" alt="Logo"
+	     width: 400 px,
+	     height: auto/>
         {% endif %}
 
 	<p>{{ site.description | default: site.github.project_tagline }}</p>
